name:                weave
version:             0.2.2.1
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Craig Roche
maintainer:          cdxr01@gmail.com
copyright:           Copyright (c) 2013 Craig Roche
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.Weave, Data.Weave.Tagged
  build-depends:       base ==4.6.*, bifunctors ==3.2.*, either ==3.4.*
